# Netra-Packet-Hunter-Pcap

./: README.md
Netra/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh
Netra/.github/workflows/: build.yml
Netra/cmake/: FindPcap.cmake
Netra/config/: netra.example.ini
Netra/docs/: CMakeLists.txt  Doxyfile.in
Netra/include/netra/analyzer/: ArtifactHunter.hpp  TrafficAnalyzer.hpp
Netra/include/netra/config/: AppConfig.hpp
Netra/include/netra/core/: Application.hpp  CaptureSource.hpp  DashboardState.hpp  PcapCaptureSource.hpp  SpscRingQueue.hpp  Types.hpp
Netra/include/netra/error/: Exceptions.hpp
Netra/include/netra/filter/: DisplayFilter.hpp
Netra/include/netra/i18n/: Localizer.hpp
Netra/include/netra/logging/: Logger.hpp
Netra/include/netra/parser/: PacketParser.hpp
Netra/include/netra/plugin/: IAnalyzerPlugin.hpp  PluginManager.hpp
Netra/include/netra/profiling/: Metrics.hpp
Netra/include/netra/ui/: Renderer.hpp  Terminal.hpp
Netra/src/: main.cpp
Netra/src/analyzer/: ArtifactHunter.cpp  TrafficAnalyzer.cpp
Netra/src/config/: AppConfig.cpp
Netra/src/core/: Application.cpp  DashboardState.cpp  PcapCaptureSource.cpp
Netra/src/error/: Exceptions.cpp
Netra/src/filter/: DisplayFilter.cpp
Netra/src/i18n/: Localizer.cpp
Netra/src/logging/: Logger.cpp
Netra/src/parser/: PacketParser.cpp
Netra/src/plugin/: PluginManager.cpp
Netra/src/profiling/: Metrics.cpp
Netra/src/ui/: Renderer.cpp  Terminal.cpp
Netra/tests/: CMakeLists.txt
Netra/tests/unit/: test_exceptions.cpp  test_logger.cpp  test_metrics.cpp  test_parser_basic.cpp
